// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalAlert Dismissable renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1m47coh-boxStyles-GlobalAlert"
  >
    <div
      class="css-kzljbg-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-fyxrud-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-9h2l8k-boxStyles-GlobalAlert"
    >
      <div
        class="css-1iroqmd-boxStyles"
      >
        <h2
          class="css-1qnzlr7-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-dbscsh-boxStyles"
          >
            Alert description.
          </p>
        </div>
      </div>
      <button
        aria-label="Close"
        class="css-12jvszj-BaseButton-GlobalAlertCloseButton"
        type="button"
      >
        <span>
          <span
            class="css-oobk4c-Button"
          >
            Close
          </span>
          <span
            aria-live="assertive"
          />
        </span>
        <svg
          aria-hidden="true"
          class="css-sbsftc-Button"
          clip-rule="evenodd"
          fill-rule="evenodd"
          focusable="false"
          height="24"
          role="img"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <line
            x1="18"
            x2="6"
            y1="6"
            y2="18"
          />
          <line
            x1="6"
            x2="18"
            y1="6"
            y2="18"
          />
        </svg>
      </button>
    </div>
  </section>
</div>
`;

exports[`GlobalAlert with tone info renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-12rxrx6-boxStyles-GlobalAlert"
  >
    <div
      class="css-1ml1e3c-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Information"
        class="css-fyxrud-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 1C5.9 1 1 5.9 1 12C1 18.1 5.9 23 12 23C18.1 23 23 18.1 23 12C23 5.9 18.1 1 12 1ZM12 18C11.4477 18 11 17.5523 11 17V11C11 10.4477 11.4477 10 12 10C12.5523 10 13 10.4477 13 11V17C13 17.5523 12.5523 18 12 18ZM12 8C12.5523 8 13 7.55228 13 7C13 6.44772 12.5523 6 12 6C11.4477 6 11 6.44772 11 7C11 7.55228 11.4477 8 12 8Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-9h2l8k-boxStyles-GlobalAlert"
    >
      <div
        class="css-1iroqmd-boxStyles"
      >
        <h2
          class="css-1drfnkh-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-dbscsh-boxStyles"
          >
            Alert description.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`GlobalAlert with tone warning renders correctly 1`] = `
<div>
  <section
    aria-label="Alert title"
    class="css-1m47coh-boxStyles-GlobalAlert"
  >
    <div
      class="css-kzljbg-boxStyles-GlobalAlert"
    >
      <svg
        aria-hidden="false"
        aria-label="Warning"
        class="css-fyxrud-Icon"
        clip-rule="evenodd"
        fill-rule="evenodd"
        focusable="false"
        height="24"
        role="img"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="m23.1 20.1-9.3-18C13.4 1.4 12.7 1 12 1s-1.4.4-1.8 1.1l-9.3 18c-.3.6-.3 1.4.1 2 .4.6 1 1 1.7 1h18.7c.7 0 1.31-.33 1.7-1 .36-.6.3-1.4 0-2ZM12 19c-.6 0-1-.4-1-1s.4-1 1-1 1 .4 1 1-.4 1-1 1Zm1-5c0 .6-.4 1-1 1s-1-.4-1-1V9c0-.6.4-1 1-1s1 .4 1 1v5Z"
          fill="currentColor"
          stroke="none"
        />
      </svg>
    </div>
    <div
      class="css-9h2l8k-boxStyles-GlobalAlert"
    >
      <div
        class="css-1iroqmd-boxStyles"
      >
        <h2
          class="css-1drfnkh-boxStyles-GlobalAlert"
        >
          Alert title
        </h2>
        <div
          class="css-1inkcod-boxStyles-GlobalAlert"
        >
          <p
            class="css-dbscsh-boxStyles"
          >
            Alert description.
          </p>
        </div>
      </div>
    </div>
  </section>
</div>
`;
